# django-schema-viewer

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
.github/workflow/: build.yaml
.github/workflows/: autoversion.yaml  build.yaml  publish.yaml  tests.yaml
docker/: Dockerfile  unit_config.json
requirements/: base.in
schema_viewer/: apps.py  schema.py  urls.py  views.py
schema_viewer/static/schema-viewer/css/: main.5636232d.css
schema_viewer/static/schema-viewer/js/: main.373ffd95.js  main.387e10bc.js  main.4589e211.js  main.58eb5a4e.js  main.58eb5a4ef.js  main.62427c30.js  main.84e65868.js  main.8695acad.js
schema_viewer/templates/schema_viewer/: index.html
schema_viewer/tests/: test_schema.py  test_view.py
tests/conf/: asgi.py  settings.py  urls.py  wsgi.py
tests/conf/settings/: __init__.py  demo.py
